Done primitive & object datatype